# dgtd

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile.in  bibliography.bib
src/: CMakeLists.txt  dgtd.cpp  dgtd_solver.h  dgtd_solver.hidden  dgtd_solver.tpp  main.cpp
src/pde/: CMakeLists.txt  advection.cpp  advection.h  pde.cpp  pde.h
src/spatial_solver/: CMakeLists.txt  elementwise_operations.h  elementwise_operations.tpp  geometric_operations.cpp  geometric_operations.h
src/spatial_solver/basis_functions/: jacobi_basis.cpp  jacobi_basis.h  legendre_basis.cpp  legendre_basis.h  polynomial.cpp  polynomial.h
src/spatial_solver/mesh/: check_mesh.cpp  check_mesh.h  import.h  import_mesh_data.cpp  import_mesh_data.h  mesh.h  mesh_geometry.h  process_mesh_data.cpp  process_mesh_data.h
src/temporal_solver/: CMakeLists.txt  butcher_coeffs.h  low_storage_runge_kutta.cpp  low_storage_runge_kutta.h
src/tools/: custom_errors.h  get.h  import.h  input.h  output.cpp  output.h
test/: CMakeLists.txt
test/examples/: Advection.npy  animate_advection.py  coordinates.npy  test_dgtd.json  three_elems.geo  three_elems.msh  times.npy
test/examples/advection/: advection.json  animate_advection.py  three_elems.msh
test/pde/: test_advection.cpp
test/spatial_solver/: test_elementwise_operations.cpp  test_geometric_operations.cpp
test/spatial_solver/basis_functions/: test_jacobi_basis.cpp  test_legendre_basis.cpp
test/spatial_solver/mesh/: test.txt  test_check_mesh.cpp  test_import.cpp  test_import_mesh_data.cpp  test_process_mesh_data.cpp
test/spatial_solver/mesh/test_meshes/: example.msh
test/spatial_solver/mesh/test_meshes/fail_meshes/: missing_meshformat_begin_spec.msh  missing_meshformat_content.msh  missing_multiple_specs.msh  parametric_flag.msh
test/src/: test_dgtd_solver.cpp
test/src/pde/: test_advection.cpp
test/src/spatial_solver/: test_elementwise_operations.cpp  test_geometric_operations.cpp
test/src/spatial_solver/basis_functions/: test_jacobi_basis.cpp  test_legendre_basis.cpp
test/src/spatial_solver/mesh/: test_check_mesh.cpp  test_import_mesh_data.cpp  test_process_mesh_data.cpp
test/src/spatial_solver/mesh/test_meshes/: cylinder.msh  line.msh  sphere.msh
test/src/spatial_solver/mesh/test_meshes/fail_meshes/: missing_meshformat_end_spec.msh  missing_physicalnames_content.msh  wrong_dimension.msh
test/src/temporal_solver/: test_low_storage_runge_kutta.cpp
test/src/tools/: test_import.cpp
test/temporal_solver/: test_low_storage_runge_kutta.cpp
test/tools/: test_import.cpp
